# csd-titlebar-move

./: .gitignore  CMakeLists.txt  flake.nix  main.cpp
nix/: package.nix
